# ml_project_template

./: README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py  pre_prompt.py
{{ cookiecutter.repo_name }}/: .dockerignore  .gitignore  .gitlab-ci.yml  README.md  build_functions.sh  build_local.sh  pyproject.toml
{{ cookiecutter.repo_name }}/docker/: docker-compose.yml  mlflow.dockerfile
{{ cookiecutter.repo_name }}/notebooks/reports/: test_notebook.ipynb
