[tool.poetry]
name = "ml-template"
version = "0.4.0"
description = "Template to use in our ML projects"
authors = ["Nikita Barsukov <nbarsukov@ptsecurity.com>","Nikolay Lyfenko <nlyfenko@ptsecurity.com>","Aleksey Zhurin <azhurin@ptsecurity.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.7.2"
rich = "^10.7.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
