[tool.poetry]
name = "ml-project-template"
version = "0.4.0"
description = "Template to use in our ML projects"
authors = ["Aleksey Zhurin <2010zalex@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.7.2"
rich = "^10.7.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
